view register: add fields

--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -71,6 +71,18 @@
                 </div>
               </div>
               -->
+              <div class="input-field  col s6  ">
+                <i class="material-icons prefix">photo_library</i>
+                <%= f.text_field :facebook  %>
+                <%= f.label :facebook %>
+                <p id="paragraph_name" class="help"></p>
+              </div>
+              <div class="input-field  col s6  ">
+                <i class="material-icons prefix">chat</i>
+                <%= f.text_field :skype  %>
+                <%= f.label :skype %>
+                <p id="paragraph_name" class="help"></p>
+              </div>
               <div class="row">
                 <div class="input-field col s6 quit-margen-botton">
                   <i class="material-icons prefix">lock_outline</i>
