view register: add value a input fields

--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -73,8 +73,8 @@
               -->
               <div class="input-field  col s6  ">
                 <i class="material-icons prefix">photo_library</i>
-                <%= f.text_field :facebook  %>
-                <%= f.label :facebook %>
+                <%= f.text_field :facebook ,value:'Https://www.facebook.com/' %>
+                <%= f.label :facebook ,class:'active' %>
                 <p id="paragraph_name" class="help"></p>
               </div>
               <div class="input-field  col s6  ">
