poniendo los tres parametros estandar

--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -30,7 +30,7 @@
                 </div>
                 <div class="input-field  col s6 ">
                   <i class="material-icons prefix">supervisor_account</i>
-                  <%= f.text_field :last_name , class:"active validate"%>
+                  <%= f.text_field :last_name%>
                   <%= f.label :last_name %>
                   <p id="paragraph_last_name" class="help"></p>
                 </div>
@@ -38,7 +38,7 @@
               <div class="row">
                 <div class="input-field col s6">
                   <i class="material-icons prefix">phone</i>
-                  <%= f.text_field :phone, class:"active validate" %>
+                  <%= f.text_field :phone %>
                   <%= f.label :phone %>
                   <p id="paragraph_phone" class="help"></p>
                 </div>
