view registration: add message error

--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -8,3 +8,14 @@
   color: #777;
 
 }
+//-------message-error-fields------------
+.input-field div.error {
+  position: relative;
+  top: -1rem;
+  left: 0rem;
+  font-size: 0.8rem;
+  color: #FF4081;
+  margin-left: 40px;
+
+}
+//------message-error-fields--------------
