--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -24,9 +24,9 @@
               <div class="row">
                 <div class="input-field  col s6  ">
                   <i class="material-icons prefix">person</i>
-                  <%= f.text_field :name  %>
+                  <%= f.text_field :name ,style: "margin-bottom: 0px"  %>
                   <%= f.label :name %>
-                  <p id="paragraph_name" class="help"></p>
+
                 </div>
                 <div class="input-field  col s6 ">
                   <i class="material-icons prefix">supervisor_account</i>
