view register: name fields whit bug beatiful

--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -14,8 +14,9 @@
   top: -1rem;
   left: 0rem;
   font-size: 0.8rem;
-  color: #FF4081;
+  color: #f44336;
   margin-left: 40px;
 
 }
 //------message-error-fields--------------
+
