--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -24,10 +24,9 @@
               <div class="row">
                 <div class="input-field  col s6  ">
                   <i class="material-icons prefix">person</i>
-                  <%= f.text_field :name ,style: "margin-bottom: 0px"  %>
+                  <%= f.text_field :name %>
                   <%= f.label :name %>
                   <p id="paragraph_name" class="help"></p>
-
                 </div>
                 <div class="input-field  col s6 ">
                   <i class="material-icons prefix">supervisor_account</i>
@@ -45,7 +44,7 @@
                 </div>
                 <div class="input-field col s6">
                   <i class="material-icons prefix">home</i>
-                  <%= f.text_field :address,class:"active validate",  style: "margin-bottom: 0px" %>
+                  <%= f.text_field :address %>
                   <%= f.label :address %>
                   <p id="paragraph_address" class="help"></p>
                 </div>
@@ -53,13 +52,13 @@
               <div class="row">
                 <div class="input-field  col s6 ">
                   <i class="material-icons prefix">account_circle</i>
-                  <%= f.text_field :user_name ,class:"active validate", style: "margin-bottom: 0px"%>
+                  <%= f.text_field :user_name %>
                   <%= f.label :user_name %>
                   <p id="paragraph_user_name" class="help"></p>
                 </div>
                 <div class="input-field col s6">
                   <i class="material-icons prefix">email</i>
-                  <%= f.email_field :email, class:"active validate",  style: "margin-bottom: 0px" %>
+                  <%= f.email_field :email ,class:"validate"%>
                   <%= f.label :email%>
                   <p id="paragraph_email" class="help"></p>
                 </div>
