--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -22,13 +22,13 @@
           <div class="row">
             <form class="col s12">
               <div class="row">
-                <div class="input-field  col s6  ">
+                <div class="input-field  col s12 m6 l6">
                   <i class="material-icons prefix">person</i>
                   <%= f.text_field :name %>
                   <%= f.label :name %>
                   <p id="paragraph_name" class="help"></p>
                 </div>
-                <div class="input-field  col s6 ">
+                <div class="input-field  col s12 m6 l6">
                   <i class="material-icons prefix">supervisor_account</i>
                   <%= f.text_field :last_name%>
                   <%= f.label :last_name %>
@@ -36,13 +36,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6 l6">
                   <i class="material-icons prefix">phone</i>
                   <%= f.text_field :phone %>
                   <%= f.label :phone %>
                   <p id="paragraph_phone" class="help"></p>
                 </div>
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6 l6">
                   <i class="material-icons prefix">home</i>
                   <%= f.text_field :address %>
                   <%= f.label :address %>
@@ -50,13 +50,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="input-field  col s6 ">
+                <div class="input-field  col s12 m6 l6">
                   <i class="material-icons prefix">account_circle</i>
                   <%= f.text_field :user_name %>
                   <%= f.label :user_name %>
                   <p id="paragraph_user_name" class="help"></p>
                 </div>
-                <div class="input-field col s6">
+                <div class="input-field col s12 m6 l6">
                   <i class="material-icons prefix">email</i>
                   <%= f.email_field :email ,class:"validate"%>
                   <%= f.label :email%>
@@ -64,13 +64,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="input-field  col s6  ">
+                <div class="input-field col s12 m6 l6">
                   <i class="material-icons prefix">photo_library</i>
                   <%= f.text_field :facebook ,value:'Https://www.facebook.com/',placeholder: 'Https://www.facebook.com/' %>
                   <%= f.label :facebook ,class:'active' %>
                   <p id="paragraph_name" class="help"></p>
                 </div>
-                <div class="input-field  col s6  ">
+                <div class="input-field col s12 m6 l6">
                   <i class="material-icons prefix">chat</i>
                   <%= f.text_field :skype  %>
                   <%= f.label :skype %>
@@ -78,15 +78,15 @@
                 </div>
               </div>
               <div class="row">
-                <div class="input-field col s6 quit-margen-botton">
+                <div class="input-field col s12 m6 l6 quit-margen-botton">
                   <i class="material-icons prefix">lock_outline</i>
-                  <%= f.password_field :password, autocomplete: "off" ,class:"active validate",  style: "margin-bottom: 0px"%>
+                  <%= f.password_field :password %>
                   <%= f.label :password ,placeholder:'Password (6 characters minimun)'%>
                   <p id="paragraph_password" class="help"></p>
                 </div>
-                <div class="input-field col s6">
+                <div class="input-field col col s12 m6 l6">
                   <i class="material-icons prefix">lock</i>
-                  <%= f.password_field :password_confirmation,autocomplete: "off",class:"active validate",  style: "margin-bottom: 0px" %>
+                  <%= f.password_field :password_confirmation %>
                   <%= f.label :password_confirmation,placeholder:'Password_Confirmation' %>
                   <p id="paragraph_password_confirmation" class="help"></p>
                 </div>
