view home:image responsive in collections

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -81,13 +81,13 @@
               <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
               <p><a href="#">link book </a></p>
             </div>
-            <div class="card-reveal">
+            <div class="card-reveal no-padding" >
 
               <ul class="collection">
                 <li class="collection-item avatar">
-                  <img src="<%= asset_path 'yuna.jpg' %>"  >                  <span class="title">Title</span>
-                  <p>First Line <br>
-                    Second Line
+                  <img src="<%= asset_path 'yuna.jpg'%>" class="circle responsive-img" >
+                  <span class="title">THE VERB BE</span>
+                  <p>Will learn to use the verb be in affirmative and negative sentences
                   </p>
                   <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
                 </li>
