--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -116,6 +116,10 @@
                   <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
                 </li>
               </ul>
+              <div class="progress">
+                <div class="determinate" style="width: 70%"></div>
+              </div>
+
 
             </div>
           </div>
