add title to the card

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -82,7 +82,7 @@
               <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal no-padding" >
-
+              <span class="card-title grey-text text-darken-4">Content Completion<i class="material-icons right">close</i></span>
               <ul class="collection">
                 <li class="collection-item avatar">
                   <img src="<%= asset_path 'yuna.jpg'%>" class="circle responsive-img" >
@@ -116,10 +116,12 @@
                   <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
                 </li>
               </ul>
-              <div class="progress">
-                <div class="determinate" style="width: 70%"></div>
+              <div>
+                <h6 class="center-align">avanze 70%</h6>
+                <div class="progress">
+                  <div class="determinate" style="width: 70%"></div>
+                </div>
               </div>
-
 
             </div>
           </div>
