add check gren to card

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -87,9 +87,11 @@
                 <li class="collection-item avatar">
                   <img src="<%= asset_path 'yuna.jpg'%>" class="circle responsive-img" >
                   <span class="title">THE VERB BE</span>
-                  <p>Will learn to use the verb be in affirmative and negative sentences
-                  </p>
-                  <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                  <div>
+                    <p>Will learn to use the verb be in affirmative and negative sentences
+                    </p>
+                  </div>
+                  <i class="material-icons secondary-content", style="color: #7cb342">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
                   <i class="material-icons circle">folder</i>
