--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -78,48 +78,47 @@
               <img src="<%= asset_path 'office.jpg' %>"  >
             </div>
             <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <span class="card-title activator grey-text text-darken-4">Book 1
+                <i class="material-icons right">more_vert</i></span>
               <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal no-padding" >
-              <span class="card-title grey-text text-darken-4">Content Completion<i class="material-icons right">close</i></span>
+              <span class="card-title grey-text text-darken-4"><b>Content Completion</b><i class="material-icons right">close</i></span>
               <ul class="collection">
                 <li class="collection-item avatar">
-                  <img src="<%= asset_path 'yuna.jpg'%>" class="circle responsive-img" >
+                  <i class="material-icons circle teal lighten-2" >book</i>
                   <span class="title">THE VERB BE</span>
-                  <div>
-                    <p>Will learn to use the verb be in affirmative and negative sentences
-                    </p>
-                  </div>
-                  <i class="material-icons secondary-content", style="color: #7cb342">check_circle</i>
+
+                    <p style="font-size: 13px">Will learn to use the verb be in affirmative and negative sentences
+                    </p >
+
+                  <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
-                  <i class="material-icons circle">folder</i>
-                  <span class="title">Title</span>
-                  <p>First Line <br>
-                    Second Line
-                  </p>
-                  <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                  <i class="material-icons circle teal lighten-2" >book</i>
+                  <span class="title">THE VERBS</span>
+                  <p style="font-size: 13px">Will learn to use the diferent verb First persona,
+                    Second person, third person
+                  </p >
+                  <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
-                  <i class="material-icons circle green">insert_chart</i>
-                  <span class="title">Title</span>
-                  <p>First Line <br>
-                    Second Line
-                  </p>
-                  <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                  <i class="material-icons circle teal lighten-2" >book</i>
+                  <span class="title">THE VERBS IN <br>PASSING</span>
+                  <p style="font-size: 13px">Will learn to use the verb in time past
+                  </p >
+                  <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
-                  <i class="material-icons circle red">play_arrow</i>
-                  <span class="title">Title</span>
-                  <p>First Line <br>
-                    Second Line
-                  </p>
-                  <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                  <i class="material-icons circle teal lighten-2" >book</i>
+                  <span class="title">THE VERB BE</span>
+                  <p style="font-size: 13px">Will learn to use the verb be in affirmative and negative sentences
+                  </p >
+                  <i class="material-icons secondary-content", style="color: #777777" >check_circle</i>
                 </li>
               </ul>
               <div>
-                <h6 class="center-align">avanze 70%</h6>
+                <h6 class="center-align"> completado 70%</h6>
                 <div class="progress">
                   <div class="determinate" style="width: 70%"></div>
                 </div>
