--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -87,34 +87,27 @@
               <ul class="collection">
                 <li class="collection-item avatar">
                   <i class="material-icons circle teal lighten-2" >book</i>
-                  <span class="title">THE VERB BE</span>
-
-                    <p style="font-size: 13px">Will learn to use the verb be in affirmative and negative sentences
+                  <span class="title">LESSON 1</span>
+                    <p style="font-size: 10px"> The Alphabet <br>
+                                                The numbers <br>
+                                                The Colors <br>
+                                                Verb “To Be” <br>
                     </p >
-
                   <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
                   <i class="material-icons circle teal lighten-2" >book</i>
-                  <span class="title">THE VERBS</span>
-                  <p style="font-size: 13px">Will learn to use the diferent verb First persona,
-                    Second person, third person
+                  <span class="title">LESSON 2</span>
+                  <p style="font-size: 10px; border: 2px; ">Greetings and farewells, Articles a/an/, Occupations, Yes/No questions Verb "be"
                   </p >
                   <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
                   <i class="material-icons circle teal lighten-2" >book</i>
-                  <span class="title">THE VERBS IN <br>PASSING</span>
-                  <p style="font-size: 13px">Will learn to use the verb in time past
+                  <span class="title">LESSON 3 </span>
+                  <p style="font-size: 10px">Personal Information, Personal Pronouns, Titles
                   </p >
-                  <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
-                </li>
-                <li class="collection-item avatar">
-                  <i class="material-icons circle teal lighten-2" >book</i>
-                  <span class="title">THE VERB BE</span>
-                  <p style="font-size: 13px">Will learn to use the verb be in affirmative and negative sentences
-                  </p >
-                  <i class="material-icons secondary-content", style="color: #777777" >check_circle</i>
+                  <i class="material-icons secondary-content" style="color: #777777">check_circle</i>
                 </li>
               </ul>
               <div>
