modifi the font size of the card

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -70,28 +70,28 @@
               <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal no-padding" >
-              <span class="card-title grey-text text-darken-4"><b>Content Completion</b><i class="material-icons right">close</i></span>
+              <span class="card-title grey-text text-darken-4" style="font-size: 20px"><b>Content Completion</b><i class="material-icons right">close</i></span>
               <ul class="collection">
                 <li class="collection-item avatar">
                   <i class="material-icons circle teal lighten-2" >book</i>
-                  <span class="title">LESSON 1</span>
-                    <p style="font-size: 10px"> The Alphabet <br>
-                                                The numbers <br>
-                                                The Colors <br>
-                                                Verb “To Be” <br>
+                  <span class="title" style="font-size: 14px">LESSON 1</span>
+                    <p style="font-size: 10px"> The Alphabet,<br>
+                                                The numbers,<br>
+                                                The Colors,<br>
+                                                Verb “To Be”.
                     </p >
                   <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
                   <i class="material-icons circle teal lighten-2" >book</i>
-                  <span class="title">LESSON 2</span>
+                  <span class="title" style="font-size: 14px">LESSON 2</span>
                   <p style="font-size: 10px; border: 2px; ">Greetings and farewells, Articles a/an/, Occupations, Yes/No questions Verb "be"
                   </p >
                   <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
                   <i class="material-icons circle teal lighten-2" >book</i>
-                  <span class="title">LESSON 3 </span>
+                  <span class="title" style="font-size: 14px">LESSON 3 </span>
                   <p style="font-size: 10px">Personal Information, Personal Pronouns, Titles
                   </p >
                   <i class="material-icons secondary-content" style="color: #777777">check_circle</i>
