besting view card3x3

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -64,72 +64,43 @@
               <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal no-padding" >
-              <h1>My Site</h1>
-              <div class="content" data-sticky_parent>
-                <div class="sidebar" data-sticky_column>
-                  This is a sticky column
-                </div>
-
-                <div class="main" data-sticky_column>
-                  This is the main column
-                  <p class="sub">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempus id
-                    leo et aliquam. Proin consectetur ligula vel neque cursus laoreet. Nullam
-                    dignissim, augue at consectetur pellentesque, metus ipsum interdum
-                    sapien, quis ornare quam enim vel ipsum.
-                  </p>
-
-                  <p class="sub">
-                    In congue nunc vitae magna
-                    tempor ultrices. Cras ultricies posuere elit. Nullam ultrices purus ante,
-                    at mattis leo placerat ac. Nunc faucibus ligula nec lorem sodales
-                    venenatis. Curabitur nec est condimentum, blandit tellus nec, semper
-                    arcu. Nullam in porta ipsum, non consectetur mi. Sed pharetra sapien
-                    nisl. Aliquam ac lectus sed elit vehicula scelerisque ut vel sem. Ut ut
-                    semper nisl.
-                  </p>
-
-                  <p class="sub">
-                    Curabitur rhoncus, arcu at placerat volutpat, felis elit sollicitudin ante, sed
-                    tempus justo nibh sed massa. Integer vestibulum non ante ornare eleifend. In
-                    vel mollis dolor.
-                  </p>
-
-
-                </div>
-              </div>
-              <div class="footer">
-                My very tall footer!
-              </div>
-              <span class="card-title grey-text text-darken-4" style="font-size: 20px"><b>Content Completion</b><i class="material-icons right">close</i></span>
-              <ul class="collection">
+              <span class="card-title grey-text text-darken-4" style="padding-left: 10px; font-weight: 400">Content Completion<i class="material-icons right">close</i></span>
+              <ul class="collection" style="height: 70%; overflow-y:scroll; ">
                 <li class="collection-item avatar">
                   <i class="material-icons circle teal lighten-2" >book</i>
                   <span class="title" style="font-size: 14px">LESSON 1</span>
-                    <p style="font-size: 10px"> The Alphabet,<br>
-                                                The numbers,<br>
-                                                The Colors,<br>
-                                                Verb “To Be”.
+                    <p style="font-size: 10px">
+                      The Alphabet<br>
+                      The numbers<br>
+                      The Colors<br>
+                      Verb “To Be”.
                     </p >
                   <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
                   <i class="material-icons circle teal lighten-2" >book</i>
                   <span class="title" style="font-size: 14px">LESSON 2</span>
-                  <p style="font-size: 10px; border: 2px; ">Greetings and farewells, Articles a/an/, Occupations, Yes/No questions Verb "be"
+                  <p style="font-size: 10px; border: 2px; ">
+                    Greetings and farewells<br>
+                    Articles a/an/<br>
+                    Occupations<br>
+                    Yes/No questions Verb "be".
                   </p >
                   <i class="material-icons secondary-content" style="color: #7cb342 ">check_circle</i>
                 </li>
                 <li class="collection-item avatar">
                   <i class="material-icons circle teal lighten-2" >book</i>
                   <span class="title" style="font-size: 14px">LESSON 3 </span>
-                  <p style="font-size: 10px">Personal Information, Personal Pronouns, Titles
+                  <p style="font-size: 10px">
+                    Personal Information<br>
+                    Personal Pronouns <br>
+                    Titles.
                   </p >
                   <i class="material-icons secondary-content" style="color: #777777">check_circle</i>
                 </li>
               </ul>
               <div>
-                <h6 class="center-align"> completado 70%</h6>
+                <h6 class="center-align" style="height: 10px;font-weight: 400"> Completed 70%</h6>
                 <div class="progress">
                   <div class="determinate" style="width: 70%"></div>
                 </div>
