create view and method for update profile

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -29,7 +29,7 @@
     </div>
   </li>
   <li>
-    <%= link_to('Profile') %>
+    <a href="students/edit">Profile </a>
   </li>
   <li><div class="divider"></div></li>
   <li>
