link to profile

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -33,7 +33,7 @@
   </li>
   <li><div class="divider"></div></li>
   <li>
-    <%= link_to('Sandbox') %>
+    <%= link_to "profile", :controller => "students/registrations", :action => "edit" %>
   </li>
   <li><div class="divider"></div></li>
   <!--log out  and log in    -->
