refactorize link to method edit profile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,11 +39,11 @@
           </div>
         </li>
         <li>
-          <a href="students/edit">Profile </a>
+          <a href="test">Profile </a>
         </li>
         <li><div class="divider"></div></li>
         <li>
-          <%= link_to "profile", :controller => "students/registrations", :action => "edit" %>
+          <%= link_to('Edit registration', edit_student_registration_path) %>
         </li>
         <li><div class="divider"></div></li>
         <!--log out  and log in    -->
