--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,59 +10,14 @@
   </head>
 
   <body>
-    <% if student_signed_in? %>
-      <!--nav var fixed  -->
-      <div class="navbar-fixed ">
-        <nav>
-          <div class="nav-wrapper blue">
-            <a href="#" data-activates="slide-out" class=" button-collapse show-on-large"><i class="material-icons">menu</i></a>
-            <a class="brand-logo left" style="position: relative">Home</a>
-          </div>
-        </nav>
-      </div>
-      <!--end nav var fixed  -->
-
-      <!--side nav  -->
-      <ul id="slide-out" class=" side-nav" >
-        <li>
-          <div class="userView">
-            <div class="background blue">
-              <!--<img src="<%= asset_path 'office.jpg' %>"  > -->
-            </div>
-            <div class="row">
-              <div class="col offset-s4">
-                <img class="circle " src=" <%=  current_student.get_base64_image %> " >
-              </div>
-            </div>
-            <span class="white-text name center-align"><%=current_student.user_name%></span>
-            <span class="white-text name center-align" ><%=current_student.email%></span>
-          </div>
-        </li>
-        <li>
-          <a href="test">Profile </a>
-        </li>
-        <li><div class="divider"></div></li>
-        <li>
-          <%= link_to('Edit registration', edit_student_registration_path) %>
-        </li>
-        <li><div class="divider"></div></li>
-        <!--log out  and log in    -->
-        <% if student_signed_in? %>
-            <li>
-              <%= link_to('Logout', destroy_student_session_path, :method => :delete) %>
-            </li>
-        <% else %>
-            <li>
-              <%= link_to('Login', root_path)  %>
-            </li>
-        <% end %>
-        <!--end log out and log in   -->
-      </ul>
-      <!--end sideNav -->
-
-    <% end %>
-
-    <%= yield %>
+    <header>
+      <% if student_signed_in? %>
+        <%= render 'layouts/navigation' %>
+      <% end %>
+    </header>
+    <main role="main">
+      <%= yield %>
+    </main>
     <!--<p class="notice"><%= notice %></p>-->
     <!--<p class="alert"><%= alert %></p>-->
   </body>
