add route to home page

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -40,6 +40,9 @@
         <%= link_to('Login', root_path)  %>
       </li>
   <% end %>
+    <li>
+      <%= link_to 'Home', root_path %>
+    </li>
   <!--end log out and log in   -->
 </ul>
 <!--end sideNav -->
