--- a/app/views/students/registrations/edit.html.erb
+++ b/app/views/students/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <%= devise_error_messages! %>
     <div class="col">
       <!-- Form with placeholder -->
-      <div class="col s12 m12 l6  "  style="margin: 10% "  >
+      <div class="col s12 m12 l6  "  style="margin-top: 3% ; margin-left: 20%; margin-right: 20% "  >
         <div class="card-panel z-depth-1 grey lighten-4 "  >
           <div class="row">
             <div class="center col s2 offset-s5">
