--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,8 +2,12 @@
 <div class="navbar-fixed ">
   <nav>
     <div class="nav-wrapper blue">
-      <a href="#" data-activates="slide-out" class=" button-collapse show-on-large"><i class="material-icons">menu</i></a>
+      <a  data-activates="slide-out" class=" button-collapse show-on-large"><i class="material-icons">menu</i></a>
       <a class="brand-logo left" style="position: relative">Home</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><%= link_to('Edit Profile', edit_student_registration_path)%></li>
+        <li><%= link_to('Home', root_path) %></li>
+      </ul>
     </div>
   </nav>
 </div>
