--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,8 @@
+<script>
+    $(document).ready(function(){
+        $(".button-collapse").sideNav();
+    });
+</script>
 <!--nav var fixed  -->
 <div class="navbar-fixed ">
   <nav>
