--- a/app/views/students/registrations/edit.html.erb
+++ b/app/views/students/registrations/edit.html.erb
@@ -1,4 +1,205 @@
 <script>
+    $("#student_name").blur(function(){
+        var cadena=$(this).val();
+        cadena =deleteSpaceWhite(cadena);
+        cadena= ucWords(cadena);
+        $(this).val(cadena);
+    });
+
+    $("#student_last_name").blur(function(){
+        var cadena=$(this).val();
+        cadena =deleteSpaceWhite(cadena);
+        cadena= ucWords(cadena);
+        $(this).val(cadena);
+    });
+    /*---------------------personalitation gem jquey validations--------------------------------------------*/
+    jQuery.validator.addMethod("lettersonlys", function(value, element) {
+        return this.optional(element) || /^[a-zA-Z\s]*$/.test(value);
+    }, "Letters only please");
+
+    jQuery.validator.addMethod("alphanumeric", function(value, element) {
+        return this.optional(element) || /^[a-zA-Z0-9_]+$/.test(value);
+    }, "Letters and numers only please");
+
+    jQuery.validator.addMethod("convertToUpperCase", function(value, element) {
+        var upperCase= ucWords(value);
+        switch (element.id){
+            case "student_name":
+                $("#student_name").val(upperCase);
+                break;
+            case 'student_last_name':
+                $("#student_last_name").val(upperCase);
+                break;
+        }
+        return true;
+    }, "error uppercase");
+
+    jQuery.validator.addMethod("deleteSpaceBeginEnd", function(value, element) {
+        var cadena="";
+        cadena=delSpaceBeginEnd(cadena);
+        switch (element.id){
+            case "student_name":
+                $("#student_name").val(cadena);
+                break;
+            case 'student_last_name':
+                $("#student_last_name").val(cadena);
+                break;
+        }
+        return true;
+    }, "error deleteSpaceBeginEnd");
+
+
+    $("#edit_student").validate({
+        rules: {
+            "student[name]": {
+                maxlength:19+1,
+                required: true,
+                lettersonlys:true,
+                //Uppercase
+
+            },
+            "student[last_name]":{
+                maxlength:19+1,
+                required: true,
+                lettersonlys:true,
+                //Uppercase
+
+            },
+            "student[phone]": {
+                digits:true,
+                required: true,
+                maxlength:8,
+                min:60000000,
+                max:79999999
+            },
+
+            "student[address]": {
+                maxlength: 50,
+                required: true
+            },
+
+            "student[user_name]": {
+                alphanumeric: true,
+                required: true,
+                minlength: 5
+            },
+
+            "student[email]": {
+                required: true,
+                email: true
+            },
+
+            "student[facebook]": {
+                required: true,
+                minlength: 5
+            },
+            "student[skype]": {
+                required: true,
+                minlength: 5
+            },
+        },
+        //For custom messages
+        messages: {
+            "student[phone]":{
+                required: "Enter a numer phone please",
+                min: "This number is not valid",
+                max: "This number is not valid"
+            },
+            curl: "Enter your website",
+        },
+        errorElement : 'div',
+        errorPlacement: function(error, element) {
+            var placement = $(element).data('error');
+            if (placement) {
+                $(placement).append(error)
+            } else {
+                error.insertAfter(element);
+            }
+        }
+    });
+
+
+
+
+    $(document).click(function(){
+        $('input[type="submit"]').removeAttr('disabled');
+    });
+
+    $(document).mouseover(function(){
+        $('input[type="submit"]').removeAttr('disabled');
+
+    });
+
+    function functionx(){
+        if(document.getElementsByName("commit").disabled == true){ //here
+            alert("disabled");
+        }else{
+            alert("enable");
+        }
+    }
+    function existNumer(valorString) {
+        var i=0;
+        while ( (valorString.indexOf(i) < 0) && (i<9) ){
+            i++;
+        }
+
+        if ( (valorString.indexOf(i)) >= (0) ){
+            return true;
+        }else{
+            return false;
+        }
+    }
+
+    function fieldEmpty(valorString){
+        if( valorString == null || valorString.length == 0 || /^\s+$/.test(valorString) ) {
+            return true;
+        }
+    }
+
+    function validateEmail(valorString) {
+        if( !(/\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)/.test(valorString)) ) {
+            return false;
+        }else{
+            return true;
+        }
+    }
+
+    function delSpaceBeginEnd(cadena){
+        var expresionRegular = /^\s+|\s+$/g;
+        return cadena.replace(expresionRegular, "");
+    }
+
+    function deleteSpaceWhite(string){
+        var s= string;
+        var ns="";
+        var arrays=s.split(" ");
+        for(i=0;i <arrays.length ;i++){
+            if(arrays[i]!= ""){
+                ns=ns+(arrays[i])+" ";
+            }
+        }
+        return (ns);
+    }
+
+    function ucWords(string){
+        var arrayWords;
+        var returnString = "";
+        var len;
+        arrayWords = string.split(" ");
+        len = arrayWords.length;
+        for(i=0;i < len ;i++){
+            if(i != (len-1)){
+                returnString = returnString+ucFirst(arrayWords[i])+" ";
+            }
+            else{
+                returnString = returnString+ucFirst(arrayWords[i]);
+            }
+        }
+        return returnString;
+    }
+    function ucFirst(string){
+        return string.substr(0,1).toUpperCase()+string.substr(1,string.length).toLowerCase();
+    }
     $(document).ready(function(){
         var message= $('#error_explanation li').text();
         $('#error_explanation').css('display','none');
