add style to message error

--- a/app/views/students/registrations/edit.html.erb
+++ b/app/views/students/registrations/edit.html.erb
@@ -1,3 +1,23 @@
+<style>
+  .help {
+    margin-left: 0px;
+    margin-top: 0;
+    font-size: 0.8em;
+    color: #777;
+
+  }
+
+    .input-field div.error {
+      position: relative;
+      top: -1rem;
+      left: 0rem;
+      font-size: 0.8rem;
+      color: #f44336;
+      margin-left: 40px;
+
+    }
+</style>
+
 <script>
     $("#student_name").blur(function(){
         var cadena=$(this).val();
