repair bug message error

--- a/app/views/students/registrations/edit.html.erb
+++ b/app/views/students/registrations/edit.html.erb
@@ -7,13 +7,11 @@
 
   }
 
-    .input-field div.error {
+    .field div.error {
       position: relative;
       top: -1rem;
-      left: 0rem;
-      font-size: 0.8rem;
-      color: #f44336;
-      margin-left: 40px;
+      font-size: 0.9rem;
+      color: red;
 
     }
 </style>
