--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,7 +5,7 @@
         <div class="col s6 m6 l4">
           <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <img src="<%= asset_path 'office.jpg' %>"  >
+              <a href='dashboard/book_container'>  <img  src="<%= asset_path 'office.jpg' %>"  >  </a>
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Book 1
