--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,9 +8,8 @@
               <a href='dashboard/book_container'>  <img  src="<%= asset_path 'office.jpg' %>"  >  </a>
             </div>
             <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Book 1
+              <span class="card-title activator grey-text text-darken-4 " style="font-weight: 400">Book 1
                 <i class="material-icons right">more_vert</i></span>
-              <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal no-padding" >
               <span class="card-title grey-text text-darken-4" style="padding-left: 10px; font-weight: 400">Content Completion<i class="material-icons right">close</i></span>
@@ -61,11 +60,10 @@
         <div class="col s6 m6 l4">
           <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <img src="<%= asset_path 'office.jpg' %>"  >
+              <%= link_to(image_tag(asset_path 'office.jpg'), dashboard_book_container_path) %>
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
-              <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
@@ -80,7 +78,6 @@
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
-              <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
@@ -95,7 +92,6 @@
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
-              <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
@@ -110,7 +106,6 @@
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
-              <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
@@ -125,7 +120,6 @@
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
-              <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
@@ -140,7 +134,6 @@
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
-              <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
@@ -155,7 +148,6 @@
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
-              <p><a href="#">link book </a></p>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
@@ -170,7 +162,7 @@
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
-              <p><a href="#">link book </a></p>
+
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
