add leter in bookContainer

--- a/app/views/dashboard/book_container.html.erb
+++ b/app/views/dashboard/book_container.html.erb
@@ -1,4 +1,25 @@
+<style>
+  #marco{
+    background: mediumblue;
+    height: 950px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: white;
+  }
+</style>
+<script>
+    $(document).ready(function(){
 
-<div class="container">
-      <h1>THIS BOOK CONTAINER </h1>
+        var txt=""
+        for (var i=1; i<=500; i++){
+           txt= txt+"  abcEnglish";
+        }
+        $("#letter").text(txt.toString());
+    });
+</script>
+
+<div class="container" id="marco" >
+      <div id="letter">
+
+      </div>
 </div>
