--- a/app/views/dashboard/book_container.html.erb
+++ b/app/views/dashboard/book_container.html.erb
@@ -22,7 +22,7 @@
       <div id="letter">
       </div>
 
-  <div class="fixed-action-btn">
+  <div class="fixed-action-btn horizontal">
     <a class="btn-floating btn-large red">
       <i class="large material-icons">mode_edit</i>
     </a>
